[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/NPCs/Flyer man.png" type="Texture" id=1]
[ext_resource path="res://Areas/M4 - Town Square/m4enemyrev.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 15 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 19.5 )

[sub_resource type="RectangleShape2D" id=3]

[node name="m4enemyrev" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 5, 2, 19, 36 )

[node name="deadBody" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="deadBody"]
position = Vector2( 1, 0 )
shape = SubResource( 1 )

[node name="pointAddBody" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pointAddBody"]
position = Vector2( 0, -53.5 )
shape = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -137 )
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1, 5 )
scale = Vector2( 0.4, 1 )

[connection signal="body_entered" from="deadBody" to="." method="_on_deadBody_body_entered"]
[connection signal="body_entered" from="pointAddBody" to="." method="_on_pointAddBody_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
